fixes #1891 Update the pom.xml and audit test cases to build with JDK 17