@@ -73,8 +73,8 @@
         <version.encoder>1.2.3</version.encoder>
         <version.logback>1.4.6</version.logback>
         <version.junit>4.13.2</version.junit>
-        <version.mockito>2.23.0</version.mockito>
-        <version.powermock>2.0.2</version.powermock>
+        <version.mockito>3.11.1</version.mockito>
+        <version.powermock>2.0.9</version.powermock>
         <version.undertow>2.3.7.Final</version.undertow>
         <version.hamcrest>1.3</version.hamcrest>
         <version.assertj>3.8.0</version.assertj>
@@ -101,9 +101,9 @@
         <version.maven-version>2.7</version.maven-version>
         <version.nexus-staging-maven>1.6.8</version.nexus-staging-maven>
         <version.maven-source>3.0.1</version.maven-source>
-        <version.maven-surefire>2.22.2</version.maven-surefire>
+        <version.maven-surefire>3.0.0-M5</version.maven-surefire>
         <version.maven-failsafe>2.22.0</version.maven-failsafe>
-        <version.jacoco>0.8.3</version.jacoco>
+        <version.jacoco>0.8.10</version.jacoco>
         <version.maven-compiler>3.8.0</version.maven-compiler>
         <version.build-helper-maven>3.0.0</version.build-helper-maven>
         <version.lifecycle-mapping>1.0.0</version.lifecycle-mapping>
@@ -818,6 +818,31 @@
                     </dependency>
                 </dependencies>
                 <configuration>
+                    <argLine>
+                        ${argLine}
+                        --add-opens java.base/java.lang=ALL-UNNAMED
+                        --add-opens java.base/java.math=ALL-UNNAMED
+                        --add-opens java.base/java.io=ALL-UNNAMED
+                        --add-opens java.base/java.util=ALL-UNNAMED
+                        --add-opens java.base/java.util.concurrent=ALL-UNNAMED
+                        --add-opens java.base/java.time=ALL-UNNAMED
+                        --add-opens java.base/java.util.stream=ALL-UNNAMED
+                        --add-opens java.base/java.text=ALL-UNNAMED
+                        --add-opens java.base/java.util.regex=ALL-UNNAMED
+                        --add-opens java.base/java.nio.channels.spi=ALL-UNNAMED
+                        --add-opens java.base/sun.nio.ch=ALL-UNNAMED
+                        --add-opens java.base/java.net=ALL-UNNAMED
+                        --add-opens java.base/java.util.concurrent=ALL-UNNAMED
+                        --add-opens java.base/sun.nio.fs=ALL-UNNAMED
+                        --add-opens java.base/sun.nio.cs=ALL-UNNAMED
+                        --add-opens java.base/java.nio.file=ALL-UNNAMED
+                        --add-opens java.base/java.nio.charset=ALL-UNNAMED
+                        --add-opens java.base/java.lang.reflect=ALL-UNNAMED
+                        --add-opens java.logging/java.util.logging=ALL-UNNAMED
+                        --add-opens java.base/java.lang.ref=ALL-UNNAMED
+                        --add-opens java.base/java.util.jar=ALL-UNNAMED
+                        --add-opens java.base/java.util.zip=ALL-UNNAMED
+                    </argLine>
                     <!-- Skips unit tests if the value of skipTests property is true -->
                     <skipTests>${skipTests}</skipTests>
                     <!-- Excludes integration tests when unit tests are run -->
